<package>
  <name>mc_rtc_msgs</name>
  <description>mc_rtc_msgs</description>
  <version>1.1.0</version>
  <author>Pierre Gergondet</author>
  <maintainer email="pierre.gergondet@gmail.com">Pierre Gergondet</maintainer>
  <license>BSD</license>
  <url>https://github.com/jrl-umi3218/mc_rtc_msgs</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>


